--- a/pin_board/app/views/pins/index.html.haml
+++ b/pin_board/app/views/pins/index.html.haml
@@ -1,1 +1,1 @@
-- @pins.each do |pin|	%h2= link_to pin.title, pin
+- @pins.each do |pin|	= link_to (image_tag pin.image.url(:medium)), pin	%h2= link_to pin.title, pin
