--- a/pin_board/app/views/pins/show.html.haml
+++ b/pin_board/app/views/pins/show.html.haml
@@ -1,1 +1,1 @@
-%h1= @pin.title%p= @pin.description\Submitted by= @pin.user.email= link_to 'Back', root_path= link_to "Edit", edit_pin_path= link_to "Delete", pin_path, method: :delete, data: { confirm: "Are you sure?"}
+= image_tag @pin.image.url(:medium)%h1= @pin.title%p= @pin.description\Submitted by= @pin.user.email= link_to 'Back', root_path= link_to "Edit", edit_pin_path= link_to "Delete", pin_path, method: :delete, data: { confirm: "Are you sure?"}
